--- a/app/src/main/res/xml/contacts.xml
+++ b/app/src/main/res/xml/contacts.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ContactsAccountType xmlns:android="http://schemas.android.com/apk/res/android"
-    inviteContactActionLabel="heyheyhey"
-    inviteContactActivity="com.example.android.myapplication.InviteContactActivity">
-
+<ContactsAccountType xmlns:android="http://schemas.android.com/apk/res/android">
     <ContactsDataKind
-        android:mimeType="vnd.android.cursor.item/vnd.example.myapplication.mimetype"
+        android:mimeType="vnd.android.cursor.item/com.example.android.myapplication.account"
         android:icon="@drawable/ic_launcher_foreground"
         android:summaryColumn="data2"
         android:detailColumn="data3"
